<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/homeback"
    android:layout_height="match_parent"
    tools:context=".chef.chefsignup">


    <!-- back Button -->
    <ImageButton
        android:id="@+id/id_cback_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="27dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_arrow"
        />

    <!-- Logo Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="119dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="119dp"
        android:src="@drawable/logo"/>

    <!-- Sign Up Linear -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_above="@+id/id_signUp_Button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/bg_linearlayout"
        android:gravity="center"
        android:orientation="vertical">

        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="39dp">

              <Strathcafe.cairoEditText
                  android:id="@+id/id_name_EditText"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginStart="5dp"
                  android:layout_marginLeft="5dp"
                  android:background="@null"
                  android:gravity="left|center"
                  android:hint="@string/full_name"
                  android:textColor="@color/Texticons"
                  android:textColorHint="@color/Texticons"
                  android:textSize="14sp"
                  tools:ignore="RtlHardcoded" />
          </LinearLayout>
  -->
        <!-- line view -->
        <View
            android:id="@+id/id_view_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp">

            <straathcafe.cairoEditText
                android:id="@+id/id_cemail_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/email"
                android:textColor="@color/Texticons"
                android:textColorHint="@color/Texticons"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <!-- line view -->
        <View
            android:id="@+id/id_view_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp">

            <straathcafe.cairoEditText
                android:id="@+id/id_cpassword_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/set_password"
                android:inputType="textPassword"
                android:textColor="@color/Texticons"
                android:textColorHint="@color/Texticons"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>

    <!-- Sign Up Button  -->
    <straathcafe.cairoButton
        android:id="@+id/id_signUp_Button"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_above="@+id/id_privacypolicy_LinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="22dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/secondarytext" />


    <!-- privacy policy Linear Layout  -->

    <LinearLayout
        android:id="@+id/id_privacypolicy_LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_SignUp_LinearLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        tools:ignore="HardcodedText">

        <straathcafe.cairoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Readterms"
            android:textColor="@color/Texticons" />

        <straathcafe.cairoTextView
            android:id="@+id/id_privacyPolicy_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/privacypolicy"
            android:textColor="@color/secondarytext"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


    <!-- Sign Up with Facebook -->
    <LinearLayout
        android:id="@+id/id_SignUp_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">


       <!-- <RelativeLayout
            android:id="@+id/id_SignUpFacebook_RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="#31FFFFFF"
            tools:ignore="UselessParent">

            <Strathcafe.cairoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:text="@string/sign_up_with_facebook"
                android:textColor="@color/Texticons"
                android:textSize="16sp" />

        </RelativeLayout>-->

    </LinearLayout>



</RelativeLayout>